rewrite Java 8 incompatible code